[package]
categories = ["parsing", "data-structures"]
description = "A library for creating lossless syntax trees"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "eventree"
readme = "README.md"
repository = "https://github.com/arzg/eventree"
version = "0.6.2"

[dependencies]
static_assertions = "1.1.0"
text-size = "1.1.1"

[dev-dependencies]
expect-test = "1.4.1"
